# Plug_and_Play_wechatQRcode_module

./: CMakeLists.txt  LICENSE  README.md  main.cpp  video_detect.cpp
wechat_qrcode/: CMakeLists.txt
wechat_qrcode/include/opencv2/: wechat_qrcode.hpp
wechat_qrcode/src/: wechat_qrcode.cpp
